tests/type_errors/sum_on_string_list.nos
# expect_error: does not implement Num
main() = {
    xs = ["a", "b", "c"]
    xs.sum()
}
